profile page done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 
+    <link rel="stylesheet" href="css/main.css">
+
     <title>Magical Demo</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+    <div class="container">
+        <h1>page links</h1>
+        <ul>
+            <li><a href="pages/profile.html" target="_blank">profile</a></li>
+            <li><a href="pages/account.html" target="_blank">account</a></li>
+            <li><a href="pages/preferences.html" target="_blank">preferences</a></li>
+            <li><a href="pages/notifications.html" target="_blank">notification</a></li>
+            <li><a href="pages/applications.html" target="_blank">applications</a></li>
+            <li><a href="pages/friendEdit.html" target="_blank">friend edit</a></li>
+            <li><a href="pages/occasionEdit.html" target="_blank">occasion edit</a></li>
+        </ul>
+    </div>
 
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
 <script src="js/jquery-3.2.1.min.js"></script>
