--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,11 +23,11 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                <div class="card-img">
-                    <img src="../asserts/images/profile-icon.png">
+                <div class="card p-5">
+                    <img class="card-img" src="../asserts/images/profile-icon.png">
                 </div>
                 <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 d-flex justify-content-center mt-3">
                         <button type="button" class="btn btn-primary py-0 px-3">
                             <i class="material-icons md-36 md-light md-thick">cloud_upload</i>
                             <span>upload</span>
