add friend occasion and application pages

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li><a href="pages/preferences.html" target="_blank">preferences</a></li>
             <li><a href="pages/notifications.html" target="_blank">notification</a></li>
             <li><a href="pages/applications.html" target="_blank">applications</a></li>
-            <li><a href="pages/friendEdit.html" target="_blank">friend edit</a></li>
-            <li><a href="pages/occasionEdit.html" target="_blank">occasion edit</a></li>
+            <li><a href="pages/friend.html" target="_blank">friend edit</a></li>
+            <li><a href="pages/occasion.html" target="_blank">occasion edit</a></li>
         </ul>
     </div>
 
