--- a/pages/profile.html
+++ b/pages/profile.html
@@ -54,8 +54,8 @@
                         </div>
                     </div>
                     <div class="form-group input-group-lg">
-                        <input type="text" class="form-control rounded" id="toglineId" aria-describedby="togline" required>
-                        <label for="toglineId">togline</label>
+                        <input type="text" class="form-control rounded" id="taglineId" aria-describedby="tagline" required>
+                        <label for="taglineId">tagline</label>
                     </div>
                     <div class="form-group input-group-lg">
                         <select class="form-control custom-select rounded" id="websiteId">
