--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="pages/applications.html" target="_blank">applications</a></li>
             <li><a href="pages/friend.html" target="_blank">friend edit</a></li>
             <li><a href="pages/occasion.html" target="_blank">occasion edit</a></li>
+            <li><a href="pages/itemView.html" target="_blank">item view</a></li>
         </ul>
     </div>
 
