--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="pages/occasion.html" target="_blank">occasion edit</a></li>
             <li><a href="pages/itemView-friend.html" target="_blank">item view - friend</a></li>
             <li><a href="pages/itemView-public.html" target="_blank">item view - public</a></li>
+            <li><a href="pages/itemEdit.html" target="_blank">item edit</a></li>
         </ul>
     </div>
 
