--- a/pages/itemEdit.html
+++ b/pages/itemEdit.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="../css/icon.css">
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Magical Item View</title>
+    <title>Magical Item Edit</title>
 </head>
-<body class="magicalBody itemView">
+<body class="magicalBody itemEdit">
     <div class="close-icon">
         <i class="material-icons md-36 md-dark">clear</i>
     </div>
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
-                <h1>item view</h1>
+                <h1>item edit</h1>
             </div>
         </div>
         <div class="row">
@@ -33,8 +33,6 @@
                                 <span>100</span>
                             </div>
                             <div class="col-3 align-to-center icon-wrapper">
-                                <i class="material-icons md-36 md-dark md-center">check_circle</i>
-                                <div>got</div>
                             </div>
                             <div class="col-3 align-to-center icon-wrapper">
                                 <i class="material-icons md-36 md-dark md-center">person_add</i>
@@ -51,7 +49,7 @@
             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
                 <form id="profileFormId">
                     <div class="form-group input-group-lg">
-                        <input type="text" class="form-control rounded" id="itemNameId" aria-describedby="item name" required>
+                        <input type="text" class="form-control rounded" id="itemNameId" aria-describedby="item name" required value="this is the item name">
                         <label for="itemNameId">item name</label>
                     </div>
                     <div class="form-group">
@@ -87,13 +85,48 @@
                         <label class="multiselect-label" for="itemOccasionsId">Occasions</label>
                     </div>
                     <div class="form-group input-group-lg">
-                        <textarea class="form-control rounded textArea" id="itemDescriptionId" rows="11"></textarea>
+                        <textarea class="form-control rounded textArea" id="itemDescriptionId" rows="5"></textarea>
                         <label for="itemDescriptionId">description</label>
                     </div>
                 </form>
+                <div class="info-block">
+                    <div class="col-2 d-flex flex-column">
+                        <i class="material-icons md-36 md-dark md-center">check_circle</i>
+                        <div class="align-to-center">got</div>
+                    </div>
+                    <div class="col-2 d-flex flex-column">
+                        <i class="material-icons md-36 md-dark md-center">assignment_ind</i>
+                        <div class="align-to-center">privacy</div>
+                    </div>
+                    <div class="col-8 d-flex justify-content-end social-media-link">
+                        <a class="mx-2" target="_blank" title="find us on Facebook" href="http://www.facebook.com/PLACEHOLDER">
+                            <img alt="follow me on facebook" src="../asserts/images/square-facebook.png" border=0>
+                        </a>
+                        <a class="mx-2" target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER">
+                            <img alt="follow me on twitter" src="../asserts/images/square-twitter.png" border=0>
+                        </a>
+                        <a class="ml-2" target="_blank" title="follow me on google plus" href="http://www.google.com/PLACEHOLDER">
+                            <img alt="follow me on twitter" src="../asserts/images/square-google-plus.png" border=0>
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-8 d-flex justify-content-start">
+                        <button type="button" class="btn btn-primary py-0 px-3">
+                            <i class="material-icons md-36 md-light md-thick">delete</i>
+                            <span>delete</span>
+                        </button>
+                    </div>
+                    <div class="col-4 d-flex justify-content-end">
+                        <button type="button" class="btn btn-primary py-0 px-3">
+                            <i class="material-icons md-36 md-light md-thick">check</i>
+                            <span>save</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row my-3">
+        <div class="row my-4">
             <div class="col-12">
                 <div class="card">
                     <div class="row p-2">
@@ -115,10 +148,54 @@
                     </div>
                     <div class="card m-2">
                         <div class="row">
-                            <div class="col-lg-9 col-md-8 col-sm-12 d-flex">
+                            <div class="col-8 d-flex">
+                                <i class="material-icons md-36 md-dark md-center">person</i>
+                                <h5 class="px-1 mt-2">me</h5>
+                                <h5 class="px-4 mt-2"> 7 days ago</h5>
+                            </div>
+                            <div class="col-4 d-flex pr-4 align-self-end">
+                                <i class="material-icons md-36 md-dark buttonStyle">mode_edit</i>
+                                <span class="mt-2 buttonStyle">edit</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 review-content px-4">
+                                Lorem ipsum dolor sit amet, vel ea scripta maluisset, vitae moderatius ius ne. No omnium minimum usu. Vel ei mazim utinam admodum, quaeque euismod vulputate no vim, et aliquip dolorum vim. Corrumpit aliquando consectetuer pro an, iriure labores at vis, democritum voluptatibus quo te. Et ludus eripuit oportere vis. Quem habemus ex ius, vim aliquip instructior in.
+
+                                Per et viderer placerat similique, no possim assentior disputationi vel. Cu vis zril oblique mediocritatem, ex eam brute epicuri dissentiet. At mea fabellas legendos. Probo nullam essent cu duo. Eirmod perpetua eloquentiam an vix.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-2">
+                        <div class="row">
+                            <div class="col-8 d-flex">
                                 <i class="material-icons md-36 md-dark md-center">person</i>
                                 <h5 class="px-1 mt-2">Lorem ipsum</h5>
                                 <h5 class="px-4 mt-2"> 7 days ago</h5>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 review-content px-4">
+                                Lorem ipsum dolor sit amet, vel ea scripta maluisset, vitae moderatius ius ne. No omnium minimum usu. Vel ei mazim utinam admodum, quaeque euismod vulputate no vim, et aliquip dolorum vim. Corrumpit aliquando consectetuer pro an, iriure labores at vis, democritum voluptatibus quo te. Et ludus eripuit oportere vis. Quem habemus ex ius, vim aliquip instructior in.
+
+                                Per et viderer placerat similique, no possim assentior disputationi vel. Cu vis zril oblique mediocritatem, ex eam brute epicuri dissentiet. At mea fabellas legendos. Probo nullam essent cu duo. Eirmod perpetua eloquentiam an vix.
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-end pr-4">
+                                <i class="material-icons md-24 md-dark md-center rounded-border m-1">thumb_up</i>
+                                <span class="m-1 pr-2">0</span>
+                                <i class="material-icons md-24 md-dark md-center rounded-border m-1">thumb_down</i>
+                                <span class="m-1">1</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card m-2">
+                        <div class="row">
+                            <div class="col-lg-9 col-md-8 col-sm-12 d-flex">
+                                <i class="material-icons md-36 md-dark md-center">person</i>
+                                <h5 class="px-1 mt-2">Lorem ipsum</h5>
+                                <h5 class="px-4 mt-2"> 11 days ago</h5>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-12 d-flex justify-content-end pr-4">
                                 <i class="material-icons md-36 md-dark md-center">star</i>
