--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="pages/itemView-friend.html" target="_blank">item view - friend</a></li>
             <li><a href="pages/itemView-public.html" target="_blank">item view - public</a></li>
             <li><a href="pages/itemEdit.html" target="_blank">item edit</a></li>
+            <li><a href="pages/reviewEdit.html" target="_blank">item review edit</a></li>
         </ul>
     </div>
 
