add add item to friend and occasion pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li><a href="pages/itemView-public.html" target="_blank">item view - public</a></li>
             <li><a href="pages/itemEdit.html" target="_blank">item edit</a></li>
             <li><a href="pages/reviewEdit.html" target="_blank">item review edit</a></li>
+            <li><a href="pages/addItemToFriend.html" target="_blank">add item to friend</a></li>
+            <li><a href="pages/addItemToOccasion.html" target="_blank">add item to occasion</a></li>
         </ul>
     </div>
 
