add scroll bar to preferences page

--- a/pages/preferences.html
+++ b/pages/preferences.html
@@ -11,7 +11,7 @@
 
     <title>Magical Preferences</title>
 </head>
-<body class="magicalBody">
+<body class="magicalBody preferences">
     <div class="close-icon">
         <i class="material-icons md-36 md-dark">clear</i>
     </div>
@@ -45,42 +45,62 @@
                         </select>
                         <label for="themeId">website</label>
                     </div>
-                    <div class="row card d-flex flex-row m-0">
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
-                        </div>
-                        <div class="col-3 px-3 py-1">
-                            <img class="card-img" src="../asserts/images/image-icon.png">
+                    <div class="row card m-0 preferenceList">
+                        <div class="d-flex flex-row row">
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
+                            <div class="col-3 p-3">
+                                <img class="card-img" src="../asserts/images/image-icon.png">
+                            </div>
                         </div>
                     </div>
                 </form>
