add landing page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="pages/reviewEdit.html" target="_blank">item review edit</a></li>
             <li><a href="pages/addItemToFriend.html" target="_blank">add item to friend</a></li>
             <li><a href="pages/addItemToOccasion.html" target="_blank">add item to occasion</a></li>
+            <li><a href="pages/landing-withFollowers.html" target="_blank">Landing page (with followers)</a></li>
         </ul>
     </div>
 
