add follower public page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="pages/addItemToFriend.html" target="_blank">add item to friend</a></li>
             <li><a href="pages/addItemToOccasion.html" target="_blank">add item to occasion</a></li>
             <li><a href="pages/landing-withFollowers.html" target="_blank">Landing page (with followers)</a></li>
+            <li><a href="pages/follower-notLogged.html" target="_blank">follower -  not logged</a></li>
         </ul>
     </div>
 
