--- a/pages/follower-notLogged.html
+++ b/pages/follower-notLogged.html
@@ -14,7 +14,7 @@
 </head>
 <body class="magicalBody followerPage">
     <div class="landing-block">
-        <div class="container mt-4">
+        <div class="container pt-4">
             <div class="row">
                 <div class="col-lg-1 col-md-2 col-sm-2">
                     <img class="profile-img" src="../asserts/images/profile-icon.png">
