--- a/pages/landing-withFollowers.html
+++ b/pages/landing-withFollowers.html
@@ -14,7 +14,7 @@
 </head>
 <body class="magicalBody landingPage">
     <div class="landing-block">
-        <div class="container mt-4">
+        <div class="container pt-4">
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-sm-12 pr-3">
                     <h1 class="mb-2">magical</h1>
