add introduction page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="pages/addItemToOccasion.html" target="_blank">add item to occasion</a></li>
             <li><a href="pages/landing-withFollowers.html" target="_blank">Landing page (with followers)</a></li>
             <li><a href="pages/follower-notLogged.html" target="_blank">follower -  not logged</a></li>
+            <li><a href="pages/introduction.html" target="_blank">introduction</a></li>
         </ul>
     </div>
 
