add arrow to introduction page

--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -84,8 +84,11 @@
                 <h1 class="">magical</h1>
                 <h5>the world's most accurate recommendation engine brings the magic back to gift giving. </h5>
             </div>
-            <div class="col-6 p-5">
+            <div class="join-text col-3 text-right">
                 <h3>join magical now</h3>
+            </div>
+            <div class="col-3 p-0 pr-3">
+                <img class="point-arrow" src="../asserts/images/arrow-two-way.png">
             </div>
         </div>
         <div class="row m-4">
